--- a/package.json
+++ b/package.json
@@ -8,9 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
+    "@vuelidate/core": "^2.0.0-alpha.4",
+    "@vuelidate/validators": "^2.0.0-alpha.2",
+    "bootstrap": "^4.5.3",
+    "bootstrap-4-grid": "^3.4.0",
+    "jquery": "^3.5.1",
+    "particles.js": "^2.0.0",
+    "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
+    "require": "^2.4.20",
+    "swiper": "^6.4.8",
     "vue": "^3.0.0",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.0.0-0",
+    "vuelidate": "^0.7.6",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
