--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-  "name": "my-website",
+  "name": "regan-designs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@glidejs/glide": "^3.4.1",
-    "bootstrap": "^4.6.0",
-    "bootstrap-4-grid": "^3.4.0",
-    "jquery": "^3.5.1",
-    "particles.js": "^2.0.0",
-    "popper.js": "^1.16.1",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "animejs": "^3.2.1",
+    "autoprefixer": "^9",
+    "particle.js": "^1.0.7",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
-    "vue-loader": "^15.9.6",
     "vue-router": "^3.2.0",
-    "vuelidate": "^0.7.6",
-    "vuex": "^3.4.0"
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/vue": "^6.2.9",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-loader": "^8.2.2",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
-    "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-tailwind": "~2.0.6",
+    "vue-loader": "^15.9.7",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -41,8 +46,7 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended",
-      "@vue/prettier"
+      "eslint:recommended"
     ],
     "parserOptions": {
       "ecmaVersion": 2020
