--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "npm run build",
-    "start": "node server.js",    
-    "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
@@ -34,10 +32,8 @@
     "babel-loader": "^8.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "express": "^4.17.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "serve-static": "^1.14.1",
     "vue-cli-plugin-tailwind": "~2.0.6",
     "vue-loader": "^15.9.7",
     "vue-particles": "^1.0.9",
