--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "animejs": "^3.2.1",
     "autoprefixer": "^9",
+    "nodemailer": "^6.6.2",
     "particle.js": "^1.0.7",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
